# VectorWave

./: Readme.md  pyproject.toml
.github/workflows/: vectorwave_ci.yml
crates/: Cargo.toml
crates/src/: lib.rs
docs_kr/: README_KR.md
src/tests/batch/: test_batch.py
src/tests/core/: test_semantic_caching.py
src/tests/database/: test_db.py
src/tests/monitoring/: test_async_logging.py  test_tracer.py
src/vectorwave/: __init__.py
src/vectorwave/batch/: batch.py
src/vectorwave/core/: auto_injector.py  decorator.py  generator.py  initializer.py
src/vectorwave/core/llm/: factory.py
src/vectorwave/database/: dataset.py  db.py  db_search.py
src/vectorwave/models/: db_config.py
src/vectorwave/monitoring/: tracer.py
src/vectorwave/search/: execution_search.py  rag_search.py
src/vectorwave/utils/: healer.py  replayer.py  replayer_semantic.py  return_caching_utils.py  serialization.py  status.py
src/vectorwave/vectorizer/: openai_vectorizer.py
test_ex/: archive.py  auto_inject_demo.py  example.py  golden_dataset_demo.py  hybrid_search.py  pure_logic.py  rag.py  real_caching.py  replay.py  replayer_semantic.py  zero_latency.py
