[package]
name = "vectorwave_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "vectorwave_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"